--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -7,7 +7,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <title>Stuff</title>
-  <h1>Hey</h1>
 </head>
 
 </html>
@@ -34,6 +33,8 @@
 
   <div class="form-group">
     <button style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnAddClick()">Add</button>
+    <button *ngIf="currentUpdateEntity" style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnUpdateConfirmClick()">Update</button>
+    <span *ngIf="currentUpdateEntity">Selected Entity Index: {{currentUpdateEntity}}</span>
     <button style="margin-right:15px;" type="button" class="btn btn-outline-danger"
       (click)="courseOnRemoveByLastClick()">Remove Last</button>
   </div>
@@ -54,6 +55,7 @@
         <td *ngIf="course">{{course.description}}</td>
         <td *ngIf="course">{{course.dateOfPublishing}}</td>
         <td *ngIf="course"><button class="btn-link glyphicon glyphicon-remove" (click)="courseOnRemoveClick(i)"></button></td>
+        <td *ngIf="course"><button class="btn-link glyphicon glyphicon-edit" (click)="courseOnUpdateClick(i)"></button></td>
       </tr>
     </tbody>
   </table>
