--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -33,8 +33,8 @@
 
   <div class="form-group">
     <button style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnAddClick()">Add</button>
-    <button *ngIf="currentUpdateEntity" style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnUpdateConfirmClick()">Update</button>
-    <span *ngIf="currentUpdateEntity">Selected Entity Index: {{currentUpdateEntity}}</span>
+    <button *ngIf="currentUpdateEntity != null" style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnUpdateConfirmClick()">Update</button>
+    <span *ngIf="currentUpdateEntity != null">Selected Entity Index: {{currentUpdateEntity}}</span>
     <button style="margin-right:15px;" type="button" class="btn btn-outline-danger"
       (click)="courseOnRemoveByLastClick()">Remove Last</button>
   </div>
@@ -50,7 +50,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let course of this.courses; let i = index">
+      <tr *ngFor="let course of this.courses; let i = index" [ngClass] = "i === currentUpdateEntity ? 'active' : ''"> 
         <td *ngIf="course">{{course.title}}</td>
         <td *ngIf="course">{{course.description}}</td>
         <td *ngIf="course">{{course.dateOfPublishing}}</td>
