--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -11,52 +11,6 @@
 
 </html>
 
-<h1 style="text-align: center;">Course Management</h1>
-<div id="addCourseModal" class="container">
-  <div class="form-group">
-    <b>Title:</b>
-    <input class="form-control" type="text" [(ngModel)]="courseTitleInput" placeholder="Title">
-    <p *ngIf="!courseTitleInput" class="text-danger">Title is empty</p>
-  </div>
-
-  <div class="form-group">
-    <b>Description:</b>
-    <input class="form-control" type="text" [(ngModel)]="courseDescInput" placeholder="Description">
-    <p *ngIf="!courseDescInput" class="text-danger">Description is empty</p>
-  </div>
-
-  <div class="form-group">
-    <b>Date of publishing:</b>
-    <input class="form-control" type="date" [(ngModel)]="courseDateOfPublishInput" placeholder="Date of publishing">
-    <p *ngIf="!courseDateOfPublishInput" class="text-danger">Date of publishing is empty</p>
-  </div>
-
-  <div class="form-group">
-    <button style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnAddClick()">Add</button>
-    <button *ngIf="currentUpdateEntity != null" style="margin-right:15px;" type="button" class="btn btn-outline-success" (click)="courseOnUpdateConfirmClick()">Update</button>
-    <span *ngIf="currentUpdateEntity != null">Selected Entity Index: {{currentUpdateEntity}}</span>
-    <button style="margin-right:15px;" type="button" class="btn btn-outline-danger"
-      (click)="courseOnRemoveByLastClick()">Remove Last</button>
-  </div>
-</div>
-
-<div class="container mt-4">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Description</th>
-        <th scope="col">Date of Publishing</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let course of this.courses; let i = index" [ngClass] = "i === currentUpdateEntity ? 'active' : ''"> 
-        <td *ngIf="course">{{course.title}}</td>
-        <td *ngIf="course">{{course.description}}</td>
-        <td *ngIf="course">{{course.dateOfPublishing}}</td>
-        <td *ngIf="course"><button class="btn-link glyphicon glyphicon-remove" (click)="courseOnRemoveClick(i)"></button></td>
-        <td *ngIf="course"><button class="btn-link glyphicon glyphicon-edit" (click)="courseOnUpdateClick(i)"></button></td>
-      </tr>
-    </tbody>
-  </table>
+<div id="user-management">
+  <app-account-edit></app-account-edit>
 </div>
