--- a/test-app/src/app/user-management/user-management.component.html
+++ b/test-app/src/app/user-management/user-management.component.html
@@ -70,7 +70,7 @@
         <td *ngIf="user">{{user.lname}}</td>
         <td *ngIf="user">{{user.email}}</td>
         <td *ngIf="user"><button class="btn-link glyphicon glyphicon-remove" (click)="userOnRemoveClick(i)"></button></td>
-        <td *ngIf="course"><button class="btn-link glyphicon glyphicon-edit" (click)="userOnUpdateClick(i)"></button></td>
+        <td *ngIf="user"><button class="btn-link glyphicon glyphicon-edit" (click)="userOnUpdateClick(i)"></button></td>
       </tr>
     </tbody>
   </table>
