Added User administration functionality

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -12,5 +12,5 @@
 </html>
 
 <div id="user-management">
-  <app-account-edit></app-account-edit>
+  <app-user-management></app-user-management>
 </div>
