Course Voting Complete

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -12,5 +12,5 @@
 </html>
 
 <div id="user-management">
-  <app-user-management></app-user-management>
+  <app-course-list></app-course-list>
 </div>
