--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -8,8 +8,26 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Courses Application</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink = "user-list">Users</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink = "course-list">Courses</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 </html>
 
-<div id="user-management">
-  <app-course-list></app-course-list>
+<div class = "container mt-4">
+  <router-outlet></router-outlet>
 </div>
