--- a/test-app/src/app/course-list/course-list.component.html
+++ b/test-app/src/app/course-list/course-list.component.html
@@ -22,14 +22,14 @@
 
 <div class="row">
   <div class="col-md-12">
-    <h5 *ngIf="selectedCourseTitle">You mark {{ selectedCourseTitle }} as your favorite course.</h5>
+    <h5 *ngIf="selectedCourseTitle">You mark {{ selectedCourseTitle }} as your favourite course.</h5>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-4" *ngFor="let course of courses">
     <app-course-list-item [course]="course"
-                         (courseSelected)="onMovieSelected($event)"
+                         (courseSelected)="onCourseSelected($event)"
                          (courseDeleted)="onDelete($event)"></app-course-list-item>
   </div>
 </div>
