Account Info and Account Edit ready

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -23,7 +23,7 @@
     </ul>
     <ul class = "navbar-nav navbar-right">
       <li class="nav-item">
-        <a class="nav-link" routerLink="'account-edit'"><span class="glyphicon glyphicon-user"></span>My Account</a>
+        <a class="nav-link" routerLink="account-info"><span class="glyphicon glyphicon-user"></span>My Account</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="register-form"><span class="glyphicon glyphicon-user"></span>Register</a>
