--- a/test-app/src/app/account-edit/account-edit.component.html
+++ b/test-app/src/app/account-edit/account-edit.component.html
@@ -1,32 +1,87 @@
-<div class="container">
-  <h1 class="mb-4 text-primary text-center">Change Account Info</h1>
-  <div class="container">
-    <ul class = "list">
-      <li>Username: {{ user.username }}</li>
-      <li>Your password: {{ user.password }}</li>
-      <li>First Name: {{ user.fname }}</li>
-      <li>Last Name: {{ user.lname }}</li>
-      <li>Email: {{ user.email }}</li>
-    </ul>
-    <button class="btn btn-info" [routerLink]="['/user-add', user.id]">Change</button>
-  </div>
+<div class = "container">
+  <h1 class="mb-4 text-primary text-center">Change your account details</h1>
+  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" class="form">
+      <div class = "form-group">
+        <label for="username">Username</label>
+        <input type="text" 
+        name="username" 
+        id="username" 
+        class="form-control" 
+        placeholder="Username" 
+        aria-describedby="helpId"
+        formControlName="username">
+        <small *ngIf="formGroup.get('username').touched && formGroup.get('username').invalid && formGroup.get('username').errors.required"
+        class="text-danger">This field is required.</small>
 
-  <div class="form-group">
-    <h1 class="text-primary text-center">Favourite Courses</h1>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Personal Rating</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let course of user.favouriteCourses; let i = index">
-          <td *ngIf="course">{{course.title}}</td>
-          <td *ngIf="course">{{getPersonalRating(course)}}</td>
-          <td *ngIf="course"><button (click)="unfavourite(course)" class = "glyphicon glyphicon-remove"> </button></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+        <small *ngIf="formGroup.get('fname').touched && formGroup.get('username').invalid && formGroup.get('username').errors.minlength" id="helpId" 
+        class="text-muted">Username is too short</small>
+
+        <small *ngIf="formGroup.get('username').touched && formGroup.get('username').invalid && formGroup.get('username').errors.maxlength" id="helpId" 
+        class="text-muted">Username is too long</small>
+      </div>
+
+      <div class = "form-group">
+          <label for="password">Password</label>
+          <input type="password" 
+          name="password" 
+          id="password" 
+          class="form-control" 
+          placeholder="Password..." 
+          aria-describedby="helpId"
+          formControlName="password">
+
+          <small *ngIf="formGroup.get('password').touched 
+          && formGroup.get('password').invalid 
+          && formGroup.get('password').errors.required" 
+          class="text-danger">Password is required!</small>
+          
+          <small *ngIf="formGroup.get('password').touched 
+          && formGroup.get('password').invalid
+          && formGroup.get('password').errors.minlength" 
+          class="text-danger">Password is too short!</small>
+
+          <small *ngIf="formGroup.get('password').touched
+          && formGroup.get('password').invalid 
+          && formGroup.get('password').errors.maxlength" 
+          class="text-danger">Password is too long!</small>
+        </div>
+
+        <div class = "form-group">
+          <label for="fname">First Name</label>
+          <input type="text" 
+          name="fname" 
+          id="fname" 
+          class="form-control" 
+          placeholder="First Name..." 
+          formControlName="fname">
+          <small *ngIf="formGroup.get('fname').touched && formGroup.get('fname').invalid && formGroup.get('fname').errors.required"
+          class="text-danger">This field is required.</small>
+
+          <small *ngIf="formGroup.get('fname').touched && formGroup.get('fname').invalid && formGroup.get('fname').errors.minlength" id="helpId" 
+          class="text-muted">First Name is too short</small>
+
+          <small *ngIf="formGroup.get('fname').touched && formGroup.get('fname').invalid && formGroup.get('fname').errors.maxlength" id="helpId" 
+          class="text-muted">First Name is too long</small>
+        </div>
+
+        <div class = "form-group">
+          <label for="lname">Last Name</label>
+          <input type="text" 
+          name="lname" 
+          id="lname" 
+          class="form-control" 
+          placeholder="Last Name..." 
+          formControlName="lname">
+          <small *ngIf="formGroup.get('lname').touched && formGroup.get('lname').invalid && formGroup.get('lname').errors.required"
+          class="text-danger">This field is required.</small>
+
+          <small *ngIf="formGroup.get('lname').touched && formGroup.get('lname').invalid && formGroup.get('lname').errors.minlength" id="helpId" 
+          class="text-muted">Last Name is too short</small>
+
+          <small *ngIf="formGroup.get('lname').touched && formGroup.get('lname').invalid && formGroup.get('lname').errors.maxlength" id="helpId" 
+          class="text-muted">Last Name is too long</small>
+        </div>
+
+        <button type="submit" class = "btn btn-info" [disabled]="formGroup.invalid">Update</button>
+  </form>
 </div>
