--- a/test-app/src/app/user-list/user-list.component.html
+++ b/test-app/src/app/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<h3 class="mb-4 text-primary text-center">User List View</h3>
+<h1 class="mb-4 text-primary text-center">Users</h1>
 
 <div class="row mb-4">
   <div class="col-md-12 d-flex justify-content-between">
