--- a/test-app/src/app/course-list-item/course-list-item.component.html
+++ b/test-app/src/app/course-list-item/course-list-item.component.html
@@ -4,8 +4,9 @@
   
     <div class="card-body">
       <p class="card-text">{{ getDescription() }}</p>
+      <p class="card-text" style="font-size: large;">Average Rating: {{ getAverageRating() }}</p>
   
-      <button class="btn btn-primary" (click)="onSelectClick()">Select</button>
+      <button class="btn btn-primary" (click)="onSelectClick()">Rate</button>
       <a class="btn btn-info ml-2" [routerLink]="['/course-add', course.id]">Update</a>
       <button class="btn btn-danger ml-2" (click)="onDeleteClick()">Delete</button>
     </div>
