Index page added, fixed isBlocked value not working properly

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -7,7 +7,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Course Application</a>
+  <a class="navbar-brand" routerLink="index">Course Application</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -38,5 +38,4 @@
 <div class="container mt-4">
   <router-outlet></router-outlet>
 </div>
-
 
