--- a/test-app/src/app/user-list/user-list.component.html
+++ b/test-app/src/app/user-list/user-list.component.html
@@ -38,9 +38,9 @@
           <td *ngIf="user">{{user.fname}}</td>
           <td *ngIf="user">{{user.lname}}</td>
           <td *ngIf="user">{{user.email}}</td>
-          <td *ngIf="user"><button class="btn-link glyphicon glyphicon-remove" (click)="onDeleteClick(i)"></button></td>
-          <td *ngIf="user"><button class="btn-link glyphicon glyphicon-edit" [routerLink]="['/user-add', user.id]"></button></td>
-          <td *ngIf="user"><button class="btn-link glyphicon glyphicon-lock"(click)="onBlockClick(i)"></button></td>
+          <td *ngIf="user"><button class="btn-link glyphicon glyphicon-remove" title="Remove" (click)="onDeleteClick(i)"></button></td>
+          <td *ngIf="user"><button class="btn-link glyphicon glyphicon-edit" title="Update" [routerLink]="['/user-add', user.id]"></button></td>
+          <td *ngIf="user"><button class="btn-link glyphicon glyphicon-lock" title="Block" (click)="onBlockClick(i)"></button></td>
         </tr>
       </tbody>
     </table>
