--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -14,22 +14,25 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="user-list">Users</a>
+      <li *ngIf="isCurrentUserAdmin" class="nav-item">
+        <a class="nav-link" href="#" routerLink="user-list">Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="course-list">Courses</a>
+        <a class="nav-link" href="#" routerLink="course-list">Courses</a>
       </li>
     </ul>
     <ul class = "navbar-nav navbar-right">
-      <li class="nav-item">
+      <li *ngIf="hasLoggedIn" class="nav-item">
         <a class="nav-link" routerLink="account-info"><span class="glyphicon glyphicon-user"></span>My Account</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="!hasLoggedIn" class="nav-item">
         <a class="nav-link" routerLink="register-form"><span class="glyphicon glyphicon-user"></span>Register</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="!hasLoggedIn" class="nav-item">
         <a class="nav-link" routerLink="login-form"><span class="glyphicon glyphicon-log-in"></span>Login</a>
+      </li>
+      <li *ngIf="hasLoggedIn" class="nav-item">
+        <a class="nav-link" href="#" (click)="onLogoutClick()"><span class="glyphicon glyphicon-log-out"></span>Logout</a>
       </li>
     </ul>
   </div>
