--- a/test-app/src/app/course/course-list-item/course-list-item.component.html
+++ b/test-app/src/app/course/course-list-item/course-list-item.component.html
@@ -7,6 +7,8 @@
       <p class="card-text" style="font-size: large;">Average Rating: {{ getAverageRating() }}</p>
   
       <button class="btn btn-primary" (click)="onSelectClick()">Rate</button>
+      <button *ngIf="!isCourseFavourite(course)"class="btn btn-warning" (click)="onFavouriteClick()">Favourite</button>
+      <button *ngIf="isCourseFavourite(course)"class="btn btn-warning" (click)="onUnfavouriteClick()">Unfavourite</button>
       <a *ngIf="isCurrentUserAdmin" class="btn btn-info ml-2" [routerLink]="['/course-add', course.id]">Update</a>
       <button *ngIf="isCurrentUserAdmin" class="btn btn-danger ml-2" (click)="onDeleteClick()">Delete</button>
     </div>
