--- a/test-app/src/app/course/course-list/course-list.component.html
+++ b/test-app/src/app/course/course-list/course-list.component.html
@@ -19,7 +19,7 @@
 
 <div *ngIf="selectedCourse" class="row">
   <div class="col-md-12">
-    <h5 *ngIf="selectedCourse">You mark {{ selectedCourse.title }} as your selected course.</h5>
+    <h5 *ngIf="selectedCourse">You mark {{ selectedCourse.title }} as your favourite course.</h5>
   </div>
 </div>
 
@@ -36,7 +36,7 @@
 
 <div class="row">
   <div class="col-md-4" *ngFor="let course of courses">
-    <app-course-list-item [course]="course" (courseSelected)="onCourseSelected($event)"
-      (courseDeleted)="onDelete($event)" (courseRated)="onCourseRated($event)"></app-course-list-item>
+    <app-course-list-item [course]="course" (courseSelected)="onCourseSelected($event)" (courseFavourited)="onCourseFavourited($event)"
+      (courseDeleted)="onDelete($event)" (courseRated)="onCourseRated($event)" (courseUnfavourited)="onCourseUnfavourited($event)"></app-course-list-item>
   </div>
 </div>
