--- a/test-app/src/app/account-info/account-info.component.html
+++ b/test-app/src/app/account-info/account-info.component.html
@@ -15,7 +15,7 @@
       <h1 class="text-primary text-center">Favourite Courses</h1>
       <table class="table">
         <thead>
-          <tr>
+          <tr hidden>
             <th scope="col">Name</th>
             <th scope="col">Personal Rating</th>
           </tr>
@@ -23,7 +23,7 @@
         <tbody>
           <tr *ngFor="let course of user.favouriteCourses; let i = index">
             <td *ngIf="course">{{course.title}}</td>
-            <td *ngIf="course">{{getPersonalRating(course)}}</td>
+            <td *ngIf="course" hidden>{{getPersonalRating(course)}}</td>
             <td *ngIf="course"><button (click)="unfavourite(course)" class = "glyphicon glyphicon-remove"> </button></td>
           </tr>
         </tbody>
