--- a/test-app/src/app/course/course-list-item/course-list-item.component.html
+++ b/test-app/src/app/course/course-list-item/course-list-item.component.html
@@ -5,6 +5,7 @@
     <div class="card-body">
       <p class="card-text">{{ getDescription() }}</p>
       <p class="card-text" style="font-size: large;">Average Rating: {{ getAverageRating() }}</p>
+      <p class="card=text" style="font-size:large;">Your rating: {{getUserRating()}}</p>
   
       <button class="btn btn-primary" (click)="onSelectClick()">Rate</button>
       <button *ngIf="!isCourseFavourite(course)"class="btn btn-warning ml-2" (click)="onFavouriteClick()">Favourite</button>
