--- a/test-app/src/app/account-info/account-info.component.html
+++ b/test-app/src/app/account-info/account-info.component.html
@@ -8,7 +8,7 @@
         <li class = "list-group-item">Last Name: {{ user.lname }}</li>
         <li class = "list-group-item">Email: {{ user.email }}</li>
       </ul>
-      <button class="btn btn-info" [routerLink]="['/account-edit', user.id]">Change</button>
+      <button class="btn btn-info" [routerLink]="['/account-edit']">Change</button>
     </div>
   
     <div class="form-group">
