--- a/test-app/src/app/auth/register-form/register-form.component.html
+++ b/test-app/src/app/auth/register-form/register-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="mb-4 text-primary text-center">Register</h1>
   <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" class="form">
-    <h3 *ngIf="registerErrorMessage">{{registerErrorMessage}}</h3>
+    <h3 *ngIf="registerErrorMessage" class="text-danger">{{registerErrorMessage}}</h3>
     <div class="form-group">
       <label for="username">Username</label>
       <input type="text" name="username" id="username" class="form-control" placeholder="Username"
@@ -35,6 +35,12 @@
       <small *ngIf="formGroup.get('password').touched
             && formGroup.get('password').invalid 
             && formGroup.get('password').errors.maxlength" class="text-danger">Password is too long!</small>
+    </div>
+
+    <div class="form-group">
+      <label for="confirmPassword">Confirm Password</label>
+      <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" placeholder="Confirm Password..."
+        aria-describedby="helpId" formControlName="confirmPassword">
     </div>
 
     <div class="form-group">
