Reverted api.json file

--- a/test-app/src/app/auth/login-form/login-form.component.html
+++ b/test-app/src/app/auth/login-form/login-form.component.html
@@ -13,7 +13,7 @@
 
       <small
         *ngIf="formGroup.get('email').touched && formGroup.get('email').invalid && formGroup.get('email').errors.email"
-        id="helpId" class="text-muted">Email is invalid</small>
+        id="helpId" class="text-danger">Email is invalid</small>
     </div>
 
     <div class="form-group">
